# carbs-king

./: .gitattributes  .gitignore  CHANGELOG.md  GITHUB_新手上传指南.md  README.md  build_apk_fast.bat  build_apk_fast.ps1  build_apk_icon_clean.ps1  build_apk_update.ps1  pyproject.toml  run_desktop.bat  upload_version_tags.bat  upload_version_tags.ps1  上传版本标签.bat  上传版本标签.ps1
docs/: ARCHITECTURE.md  REFACTOR_BASELINE.md
src/: achievement_definitions.py  achievement_service.py  achievement_views.py  analytics_calendar_views.py  analytics_model.py  analytics_page.py  analytics_service.py  analytics_summary_views.py  analytics_trend_views.py  analytics_ui.py  analytics_views.py  analytics_weekly_review_views.py  app_context.py  app_defaults.py  app_state.py  app_utils.py  backup_controller.py  backup_service.py  controller_runtime.py  daily_record_controller.py  data_record_controller.py  diet_controller.py  diet_service.py  diet_views.py  exercise_library.py  form_views.py  main.py  navigation_service.py  navigation_views.py  nutrition_service.py  profile_backup_views.py  profile_controller.py  profile_details_views.py  profile_macro_views.py  profile_views.py  recovery_controller.py  repositories.py  rest_notification.py  storage_service.py  today_controller.py  (+11 more)
tests/: test_achievement_service.py  test_analytics_service.py  test_analytics_views.py  test_app_state_and_repositories.py  test_backup_service.py  test_daily_record_controller.py  test_dead_view_removal.py  test_diet_information_architecture.py  test_exercise_library.py  test_main_analytics_integration.py  test_navigation_service.py  test_profile_achievement_celebration.py  test_profile_macro_and_measurements.py  test_rest_notification.py  test_storage_isolation.py  test_training_clock_service.py  test_training_experience_service.py  test_training_plan_views.py  test_training_service.py  (+5 more)
(+7 files in other folders)
