[project]
name = "carbs_king"
version = "1.0.16"
description = "Carb cycle recorder"
requires-python = ">=3.12"
dependencies = [
    "flet==0.85.3"
]

[tool.flet]
icon = "assets/icon.png"
product = "碳水大王"
org = "com.chenyang"
bundle_id = "com.chenyang.carbs_king"
artifact = "carbs_king"
build_number = 48
company = "chenyang"

[tool.flet.app]
path = "src"
module = "main"

[tool.flet.android]
adaptive_icon_foreground = "assets/icon.png"
adaptive_icon_background = "#42D0A3"
